# choruskit

./: CMakeLists.txt  README.md
cmake/: ChorusKitAPI.cmake
cmake/commands/: CopyIfDifferent.cmake  RemoveEmptyDirs.cmake
cmake/modules/: Basic.cmake  BuildInfo.cmake  FileCopy.cmake  FindQMake.cmake  OSResource.cmake  Target.cmake  Translate.cmake
cmake/python/: macdeploy.py  windeploy.py
cmake/scripts/: runpath.bat
docs/: extension-system.md  plugin-loader.md
docs/appcore/: action-system.md  index.md
share/: CMakeLists.txt
share/translations/: choruskit_en_US.ts  choruskit_ja_JP.ts  choruskit_zh_CN.ts  choruskit_zh_HK.ts  choruskit_zh_TW.ts
src/: CMakeLists.txt  ChorusKitConfig.cmake.in
src/appcore/: CMakeLists.txt  CkAppCoreGlobal.h  ckappcoreglobal.h
src/appcore/actions/: actiondomain.cpp  actiondomain.h  actiondomain_p.h  actionextension.cpp  actionextension.h  actionextension_p.h  actionitem.cpp  actionitem.h  actionitem_p.h  actionspec.cpp  actionspec.h  actionspec_p.h  actionsystem.cpp  actionsystem.h  actionsystem_p.h
src/appcore/base/: applicationinfo.cpp  applicationinfo.h  displaystring.cpp  displaystring.h  shortcutcontext.cpp  shortcutcontext.h
src/appcore/core/: coreinterfacebase.cpp  coreinterfacebase.h  coreinterfacebase_p.h  executiveinterface.cpp  executiveinterface.h  executiveinterface_p.h  icorebase.cpp  icorebase.h  icorebase_p.h  iexecutive.cpp  iexecutive.h  iexecutive_p.h  iloader.cpp  iloader.h  iloader_p.h  logger.cpp  logger.h  logger_p.h  objectpool.cpp  objectpool.h  objectpool_p.h  plugindatabase.cpp  plugindatabase.h  plugindatabase_p.h  runtimeinterface.cpp  runtimeinterface.h  runtimeinterface_p.h
src/appcore/doc/: documentspec.cpp  documentspec.h  documentspec_p.h  documentsystem.cpp  documentsystem.h  documentsystem_p.h  documentwatcher.cpp  documentwatcher.h  documentwatcher_p.h  filelocker.cpp  filelocker.h  filelocker_p.h  idocument.cpp  idocument.h  idocument_p.h  recentfilecollection.cpp  recentfilecollection.h  recentfilecollection_p.h
src/appcore/include/CoreApi/: ActionContext.h  ActionDomain.h  ActionItem.h  ActionSpec.h  ActionSystem.h  IEditorSelection.h  IWindow.h  WindowSystem.h
src/appcore/internal/: qmxmladaptor.cpp  qmxmladaptor_p.h
src/appcore/managers/: ActionDomain.h  ActionDomain_p.h  ActionItem.cpp  ActionItem.h  ActionItem_p.h  ActionSpec.h  ActionSystem.cpp  ActionSystem_p.h  DocumentSystem.cpp  ILoader_p.h
src/appcore/settings/: isettingpage.cpp  isettingpage.h  isettingpage_p.h  settingcatalog.cpp  settingcatalog.h  settingcatalog_p.h
src/appcore/src/: ActionContext.cpp  ActionDomain.cpp  ActionDomain_p.h  ActionItem.cpp  ActionSpec.cpp  ActionSystem.cpp  ActionSystem_p.h  IEditorSelection.cpp  IWindow.cpp  WindowSystem.cpp
src/appcore/translation/: translationmanager.cpp  translationmanager.h  translationmanager_p.h
src/appcore/window/: IWindow_p.h  ShortcutContext_p.h  WindowSystem.cpp  iwindow.cpp  iwindow.h  iwindow_p.h  iwindowaddon.cpp  iwindowaddon.h  iwindowaddon_p.h  windowelementsadaptor.cpp  windowelementsadaptor.h  windowinterface.cpp  windowinterface.h  windowinterface_p.h  windowstatecache.h  windowsystem.cpp  windowsystem.h  windowsystem_p.h
src/loader/: CMakeLists.txt
src/loader/config/: qasc.cmake
src/loader/include/: loaderconfig.h
src/loader/include/CkLoader/: loaderconfig.h  loaderspec.h
src/loader/src/: loaderconfig.cpp  loaderspec.cpp  loaderutils.cpp  loaderutils.h  main.cpp  splashconfig.cpp  splashconfig.h  splashscreen.cpp  splashscreen.h
src/loader/src/config/: loadconfig.cpp  loadconfig.h
src/loader/src/splash/: SplashScreen.cpp  SplashScreen.h
src/svsbase/: CMakeLists.txt
src/svsbase/include/SVSBase/: CkSVSBaseGlobal.h  LongTime.h  MusicMode.h  MusicTime.h  MusicTime_p.h  MusicTimeline.h  MusicTimeline_p.h
src/svsbase/src/: LongTime.cpp  MusicMode.cpp  MusicTime.cpp  MusicTimeline.cpp
src/svsbasic/: CMakeLists.txt  CkSVSBasicGlobal.h
src/svsbasic/core/: LongTime.h  MusicMode.cpp  MusicMode.h  MusicTime.h  MusicTime_p.h  MusicTimeline.cpp  MusicTimeline.h  MusicTimeline_p.h
src/svsbasic/include/SVSBasic/: LongTime.h  MusicMode.h  MusicTime.h  MusicTimeline.h
src/svsbasic/src/: MusicMode.cpp
src/svsutils/: CMakeLists.txt
src/svswidgets/: CMakeLists.txt  CkSVSWidgetsNamespace.h
src/svswidgets/include/SVSWidgets/: CkSVSWidgetsGlobal.h  CkSVSWidgetsNamespace.h  CommandPalette.h  LinearScrollArea.h  SynthVSplitter.h  TitleListItemDelegate_p.h  TitleListWidget.h  TitleListWidget_p.h
src/svswidgets/itemmodel/: TitleListItemDelegate.cpp  TitleListItemDelegate.h  TitleListItemDelegate_p.h
src/svswidgets/src/: CommandPalette.cpp  NoneScrollArea.cpp
src/svswidgets/widgets/: BaseContainer.cpp  BaseContainer.h  CommandPalette.cpp  CommandPalette.h  CommandPalette_p.h  FullIconButton.cpp  FullIconButton.h  LinearScrollArea.cpp  LinearScrollArea.h  NoneScrollArea.h  SynthVSplitter.cpp  SynthVSplitter.h  SynthVSplitter_p.h  TitleListWidget.cpp  TitleListWidget.h  TitleListWidget_p.h
src/tools/: CMakeLists.txt
src/tools/aec/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  parser.cpp  parser.h
tools/: CMakeLists.txt
tools/windeps/: CMakeLists.txt  main.cpp
